--- a/pom.xml
+++ b/pom.xml
@@ -90,8 +90,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>2.3.2</version>
 				<configuration>
-					<source>${8}</source>
-					<target>${8}</target>
+					<source>21</source>
+					<target>21</target>
 				</configuration>
 			</plugin>
 
